@@ -156,7 +156,6 @@ ldap_mail=Add mail attribute to LDAP users?,1,1-Yes using only <tt>mail</tt> att
 maillog_hide=Allow searching of mail logs,1,0-Yes,1-For master admin only,2-No
 maillog_period=Number of days to keep processed mail logs,3,Forever
 allow_upper=Force mailbox usernames to lower case?,1,0-Yes,1-No
-delete_virts=Delete all email aliases when disabling mail?,1,1-Yes,0-No
 leave_acl=Always re-update Webmin module ACLs?,1,0-Yes,1-No
 webalizer_nocron=Setup Webalizer Cron job for each virtual server?,1,0-Yes,1-No
 allow_subdoms=Allow creation of sub-domains?,1,1-Yes,0-No,-Decide automatically
