@@ -1,3 +1,0 @@
-<header>Delete all Apache virtual hosts in domain when deleting?</header>
-It is possible for additional Apache sub-domains to be created by Virtualmin or the Apache module or hand-editing of the configuration file.  This option selects whether all virtual hosts within the domain will be removed on deletion of a virtual server account.
-<footer>
