@@ -1,15 +1,0 @@
-<header>Delete all email aliases when disabling mail?</header>
-
-By default (when this is set to <b>No</b>), Virtualmin will not delete
-any mail aliases in a domain when the email feature is disabled. This means
-that if email is ever re-enabled, aliases will be restored and users who
-had email addresses before will have them again. <p>
-
-However, when using Postfix email sent from the Virtualmin system by
-the <tt>mail</tt> or <tt>sendmail</tt> commands will still be forwarded
-to local mailboxes if these residual aliases exist. If this is causing
-problems for you, this setting can be changed to <b>Yes</b> before a domain
-has mail disabled, to ensure that aliases are fully deleted. <p>
-
-<footer>
-
